--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-day-picker": "^9.2.1",
     "react-dom": "^18.3.1",
     "tailwind-variants": "^0.2.1",
+    "tsup": "^8.3.5",
     "typescript": "^5.3.3"
   },
   "devDependencies": {
